tests/Workflow/Syntax.expected
[Parse Error] Line 3:17 >> invalid type
