tests/Workflow/Syntax.rbk
method Main is
begin
    MUTABLE X : = 5
end Main
